ZPI-xx: Resolve merge conflicts
